apps/awx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: awx
  namespace: awx
spec:
  ingressClassName: nginx
  rules:
    - host: awx.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: awx-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - awx.int.kyledev.co
      secretName: awx-kyledev-tls-prod
